# Fdf

./: CMakeLists.txt  Makefile  README.md  a.out  fdf  fdf.h  main.c
src/: draw_lines.c  fdf.h  keyboard_control.c  main.c  mix.c  mouse_control.c  rotate.c
